---
source: src/codegen/tests/initialization_test.rs
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%func_interface = type { i16, [4 x i32], i32*, float }

define i16 @func(%func_interface* %0) {
entry:
  %int_var = getelementptr inbounds %func_interface, %func_interface* %0, i32 0, i32 0
  %arr_var = getelementptr inbounds %func_interface, %func_interface* %0, i32 0, i32 1
  %ptr_var = getelementptr inbounds %func_interface, %func_interface* %0, i32 0, i32 2
  %float_var = getelementptr inbounds %func_interface, %func_interface* %0, i32 0, i32 3
  %func = alloca i16, align 2
  store i16 0, i16* %int_var, align 2
  store [4 x i32] zeroinitializer, [4 x i32]* %arr_var, align 4
  store i32* null, i32** %ptr_var, align 8
  store float 0.000000e+00, float* %float_var, align 4
  %func_ret = load i16, i16* %func, align 2
  ret i16 %func_ret
}

